--- a/ProdutosDotNetCorePlusEF/Frontend/package.json
+++ b/ProdutosDotNetCorePlusEF/Frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.8.4",
@@ -17,10 +18,12 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
+    "vite-plugin-pages": "^0.33.0",
     "vue-tsc": "^2.2.4"
   }
 }
